<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:textColor="#000000"
        android:textStyle="italic"
        android:textSize="25sp"
        android:text="@string/title" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:entries="@array/cartypes"/>

    <EditText
        android:id="@+id/edittext"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="@string/hint"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/qdays"
            android:textSize="15sp"/>
        <TextView
            android:id="@+id/numdays"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/ndays"/>
    </LinearLayout>

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_marginTop="15dp"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="10"
        android:min="1"
        android:progress="3" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/dAge"
        android:textStyle="bold"
        android:textSize="20sp"/>

    <RadioGroup
        android:id="@+id/radiogroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="15dp">
        <RadioButton
            android:id="@+id/radioless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/less"
            android:textColor="#050"/>
        <RadioButton
            android:id="@+id/radiobet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/between"
            android:textColor="#050"/>
        <RadioButton
            android:id="@+id/radioabove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/above"
            android:textColor="#050"/>


    </RadioGroup>



</LinearLayout>